#!/usr/bin/env python3
"""
LoL Nexus Orchestrator v1.0 - Trinity Convergence Engine
Primary autonomous execution engine for the LoL Nexus Compute Fabric
Trinity Integration: PONGEX + omniterm + OMNIMESH
Timestamp: July 25, 2025
"""

import asyncio
import json
import logging
import os
import sys
import time
from datetime import datetime
from pathlib import Path
from typing import Dict, List, Optional, Any

import toml
from loguru import logger
from pydantic import ValidationError

# Add the project root to the Python path
project_root = Path(__file__).parent.parent
sys.path.insert(0, str(project_root))

try:
    from agents.models.action import (
        Action, ActionResult, ActionType, AgentConfig,
        InstructionBlock, OverallResult, ExecutionContext
    )
except ImportError:
    # Fallback for basic operation if models not available
    logger.warning("Agent models not available, using basic types")
    AgentConfig = dict
    ExecutionContext = dict
    OverallResult = dict
    InstructionBlock = dict


class NexusOrchestrator:
    """
    The LoL Nexus Orchestrator - Trinity Convergence Engine
    Primary autonomous execution engine for LoL Nexus Compute Fabric
    """

    def __init__(self, config_path: Optional[str] = None):
        self.config_path = config_path or "config/nexus_config.toml"
        self.config: Optional[AgentConfig] = None
        self.is_running = False
        self.execution_context: Optional[ExecutionContext] = None
        self.active_instructions: Dict[str, InstructionBlock] = {}
        self.execution_history: List[OverallResult] = []
        
        # Trinity convergence components
        self.pongex_engine = None
        self.omniterm_interface = None
        self.omnimesh_platform = None

        # Setup logging
        self._setup_logging()

        logger.info("üöÄ LoL Nexus Orchestrator v1.0 initializing Trinity Convergence...")

    def _setup_logging(self):
        """Configure structured logging for the LoL Nexus Orchestrator"""
        # Remove default logger
        logger.remove()

        # Add structured JSON logging to file
        log_dir = Path("logs")
        log_dir.mkdir(exist_ok=True)

        logger.add(
            log_dir / "nexus_orchestrator.log",
            format="{time:YYYY-MM-DD HH:mm:ss} | {level} | {name}:{function}:{line} | {message}",
            rotation="100 MB",
            retention="30 days",
            serialize=True,  # JSON format
            level="INFO"
        )

        # Add console logging
        logger.add(
            sys.stdout,
            format="<green>{time:HH:mm:ss}</green> | <level>{level: <8}</level> | <cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - <level>{message}</level>",
            level="INFO"
        )

    def load_config(self) -> None:
        """Load LoL Nexus unified configuration from TOML files"""
        logger.info("üìã Loading LoL Nexus Trinity Convergence configuration...")

        # Load unified nexus configuration
        nexus_config_path = Path(self.config_path)
        config_data = {}

        # Load unified LoL Nexus config
        if nexus_config_path.exists():
            try:
                nexus_config = toml.load(nexus_config_path)
                logger.info(f"‚úÖ Loaded unified config from {nexus_config_path}")

                # Extract nexus orchestrator settings
                if "nexus" in nexus_config:
                    config_data["name"] = nexus_config["nexus"].get("name", "LoL Nexus")
                    config_data["version"] = nexus_config["nexus"].get("version", "1.0.0")
                    config_data["debug_mode"] = nexus_config["nexus"].get("debug_mode", False)

                if "orchestrator" in nexus_config:
                    config_data["autonomous_execution"] = nexus_config["orchestrator"].get("autonomous_execution", True)
                    config_data["mission_interval_seconds"] = nexus_config["orchestrator"].get("mission_interval_seconds", 300)

                if "trinity_core" in nexus_config:
                    config_data["pongex_enabled"] = nexus_config["trinity_core"].get("pongex_engine_enabled", True)
                    config_data["omniterm_enabled"] = nexus_config["trinity_core"].get("omniterm_interface_enabled", True)
                    config_data["omnimesh_enabled"] = nexus_config["trinity_core"].get("omnimesh_platform_enabled", True)

                if "ai_llm" in nexus_config:
                    config_data["ollama_host"] = nexus_config["ai_llm"].get("ollama_host", "http://localhost:11434")

            except Exception as e:
                logger.warning(f"‚ö†Ô∏è  Failed to load unified config: {e}")
                # Set defaults
                config_data = {
                    "name": "LoL Nexus Compute Fabric",
                    "version": "1.0.0",
                    "autonomous_execution": True,
                    "mission_interval_seconds": 300,
                    "pongex_enabled": True,
                    "omniterm_enabled": True,
                    "omnimesh_enabled": True,
                    "ollama_host": "http://localhost:11434"
                }

        # Store config as simple dict for Trinity system
        self.config = config_data
        logger.info("‚úÖ LoL Nexus Trinity configuration loaded successfully")

    async def initialize_trinity_components(self):
        """Initialize the Trinity Convergence components"""
        logger.info("üîÑ Initializing Trinity Convergence components...")
        
        # Initialize PONGEX Engine
        if self.config.get("pongex_enabled", True):
            try:
                logger.info("üü¢ PONGEX Engine: Initializing...")
                self.pongex_engine = {"status": "initialized", "type": "exwork_agent"}
                logger.info("‚úÖ PONGEX Engine: Ready")
            except Exception as e:
                logger.error(f"‚ùå PONGEX Engine initialization failed: {e}")
        
        # Initialize omniterm Interface
        if self.config.get("omniterm_enabled", True):
            try:
                logger.info("üü¢ omniterm Interface: Initializing...")
                self.omniterm_interface = {"status": "initialized", "type": "genesis_agent"}
                logger.info("‚úÖ omniterm Interface: Ready")
            except Exception as e:
                logger.error(f"‚ùå omniterm Interface initialization failed: {e}")
        
        # Initialize OMNIMESH Platform
        if self.config.get("omnimesh_enabled", True):
            try:
                logger.info("üü¢ OMNIMESH Platform: Initializing...")
                self.omnimesh_platform = {"status": "initialized", "type": "infrastructure"}
                logger.info("‚úÖ OMNIMESH Platform: Ready")
            except Exception as e:
                logger.error(f"‚ùå OMNIMESH Platform initialization failed: {e}")

    async def execute_autonomous_mission(self) -> dict:
        """
        Execute a complete instruction block
        """
        logger.info(f"üéØ Executing instruction block: {instruction_block.step_id}")
        logger.info(f"üìù Description: {instruction_block.description}")

        start_time = time.time()
        action_results: List[ActionResult] = []
        overall_success = True

        # Update execution context with transaction ID
        if self.execution_context:
            self.execution_context.transaction_id = instruction_block.transaction_id

        # Store the active instruction
        self.active_instructions[instruction_block.step_id] = instruction_block

        try:
            # Handle high-level goals with autonomous planning
            if instruction_block.is_high_level_goal and instruction_block.goal:
                logger.info(f"ü§ñ Autonomous planning for goal: {instruction_block.goal}")
                # TODO: Implement autonomous planning logic
                # For now, create a simple diagnostic action
                diagnostic_action = Action(
                    step_id=f"diagnostic_{int(time.time())}",
                    type=ActionType.SYSTEM_INFO,
                    description=f"Autonomous diagnostic for goal: {instruction_block.goal}",
                    params={"info_type": "system_overview"},
                    timeout_seconds=30
                )
                instruction_block.actions = [diagnostic_action]

            # Execute each action in the instruction block
            for action in instruction_block.actions:
                logger.info(f"‚ö° Executing action: {action.step_id} ({action.type})")

                try:
                    result = await self.execute_action(action)
                    action_results.append(result)

                    if not result.success:
                        overall_success = False
                        logger.error(f"‚ùå Action failed: {action.step_id} - {result.error}")

                        # TODO: Implement retry logic and error recovery

                except Exception as e:
                    logger.error(f"üí• Exception during action execution: {e}")
                    error_result = ActionResult(
                        success=False,
                        output="",
                        error=f"Exception during execution: {str(e)}",
                        action_type=action.type,
                        action_id=action.step_id,
                        duration_seconds=0.0,
                        timestamp=datetime.now()
                    )
                    action_results.append(error_result)
                    overall_success = False

        except Exception as e:
            logger.error(f"üí• Critical error during instruction block execution: {e}")
            overall_success = False

        finally:
            # Remove from active instructions
            self.active_instructions.pop(instruction_block.step_id, None)

        # Create overall result
        total_duration = time.time() - start_time
        overall_result = OverallResult(
            overall_success=overall_success,
            status_message=f"Executed {len(action_results)} actions, {sum(1 for r in action_results if r.success)} succeeded",
            total_duration_seconds=total_duration,
            action_results=action_results,
            timestamp=datetime.now(),
            instruction_block_id=instruction_block.step_id,
            transaction_id=instruction_block.transaction_id,
            source_actor=instruction_block.source_actor
        )

        # Store in execution history
        self.execution_history.append(overall_result)

        # Keep only last 100 results to prevent memory issues
        if len(self.execution_history) > 100:
            self.execution_history = self.execution_history[-100:]

        logger.info(f"‚úÖ Instruction block completed: {instruction_block.step_id} (Success: {overall_success})")
        return overall_result

    async def execute_action(self, action: Action) -> ActionResult:
        """
        Execute a single action
        """
        start_time = time.time()

        try:
            # TODO: Implement action handlers
            # For now, create mock execution based on action type

            if action.type == ActionType.SYSTEM_INFO:
                return await self._mock_system_info_action(action)
            elif action.type == ActionType.RUN_SCRIPT:
                return await self._mock_run_script_action(action)
            elif action.type == ActionType.CALL_LOCAL_LLM:
                return await self._mock_llm_action(action)
            else:
                # Default mock action
                await asyncio.sleep(0.1)  # Simulate work
                return ActionResult(
                    success=True,
                    output=f"Mock execution of {action.type} action completed",
                    error="",
                    action_type=action.type,
                    action_id=action.step_id,
                    duration_seconds=time.time() - start_time,
                    timestamp=datetime.now(),
                    payload={"mock": True, "params": action.params}
                )

        except Exception as e:
            return ActionResult(
                success=False,
                output="",
                error=f"Action execution failed: {str(e)}",
                action_type=action.type,
                action_id=action.step_id,
                duration_seconds=time.time() - start_time,
                timestamp=datetime.now()
            )

    async def _mock_system_info_action(self, action: Action) -> ActionResult:
        """Mock system information gathering"""
        start_time = time.time()

        import platform
        import psutil

        try:
            system_info = {
                "platform": platform.platform(),
                "python_version": platform.python_version(),
                "cpu_count": psutil.cpu_count(),
                "memory_total": psutil.virtual_memory().total,
                "disk_usage": psutil.disk_usage('/').percent,
                "current_time": datetime.now().isoformat()
            }

            return ActionResult(
                success=True,
                output=json.dumps(system_info, indent=2),
                error="",
                action_type=action.type,
                action_id=action.step_id,
                duration_seconds=time.time() - start_time,
                timestamp=datetime.now(),
                payload=system_info
            )

        except Exception as e:
            return ActionResult(
                success=False,
                output="",
                error=f"System info gathering failed: {str(e)}",
                action_type=action.type,
                action_id=action.step_id,
                duration_seconds=time.time() - start_time,
                timestamp=datetime.now()
            )

    async def _mock_run_script_action(self, action: Action) -> ActionResult:
        """Mock script execution"""
        start_time = time.time()

        script = action.params.get("script", "echo 'Hello from Agent Ex-Work'")

        return ActionResult(
            success=True,
            output=f"Mock execution of script: {script}\nScript output would appear here",
            error="",
            action_type=action.type,
            action_id=action.step_id,
            duration_seconds=time.time() - start_time,
            timestamp=datetime.now(),
            payload={"script": script, "mock": True}
        )

    async def _mock_llm_action(self, action: Action) -> ActionResult:
        """Mock LLM interaction"""
        start_time = time.time()

        prompt = action.params.get("prompt", "System status check")

        # Simulate LLM processing time
        await asyncio.sleep(0.5)

        mock_response = f"AI Analysis for: {prompt}\n\nBased on current system parameters, the optimal approach would be to implement a structured diagnostic protocol. This would involve systematic evaluation of key performance indicators and strategic alignment with core directives."

        return ActionResult(
            success=True,
            output=mock_response,
            error="",
            action_type=action.type,
            action_id=action.step_id,
            duration_seconds=time.time() - start_time,
            timestamp=datetime.now(),
            payload={"prompt": prompt, "model": "mock_llm", "tokens_used": 150}
        )

    def get_status(self) -> Dict[str, Any]:
        """Get current agent status"""
        return {
            "agent_id": self.config.agent_id if self.config else "unknown",
            "is_running": self.is_running,
            "uptime_seconds": time.time() - self.start_time if hasattr(self, 'start_time') else 0,
            "active_instructions": len(self.active_instructions),
            "total_executions": len(self.execution_history),
            "recent_executions": [
                {
                    "id": r.instruction_block_id,
                    "success": r.overall_success,
                    "timestamp": r.timestamp.isoformat(),
                    "duration": r.total_duration_seconds
                }
                for r in self.execution_history[-5:]  # Last 5
            ],
            "execution_context": self.execution_context.dict() if self.execution_context else None,
            "timestamp": datetime.now().isoformat()
        }

    async def start(self):
        """Start the Agent Ex-Work daemon"""
        logger.info("üöÄ Starting Agent Ex-Work v3.0...")

        self.load_config()
        self.is_running = True
        self.start_time = time.time()

        logger.info(f"‚úÖ Agent Ex-Work started successfully")
        logger.info(f"üÜî Agent ID: {self.config.agent_id}")
        logger.info(f"üåê Hive Address: {self.config.hive_address}")
        logger.info(f"üéß Listen Port: {self.config.listen_port}")

        # Start the main agent loop
        await self.main_loop()

    async def main_loop(self):
        """Main agent execution loop"""
        logger.info("üîÑ Agent Ex-Work main loop started")

        # Demonstration: Create and execute a self-diagnostic instruction block
        demo_instruction = InstructionBlock(
            step_id=f"demo_diagnostic_{int(time.time())}",
            description="Agent Ex-Work v3.0 self-diagnostic and capability demonstration",
            actions=[
                Action(
                    step_id="system_info",
                    type=ActionType.SYSTEM_INFO,
                    description="Gather system information",
                    params={"info_type": "comprehensive"}
                ),
                Action(
                    step_id="llm_test",
                    type=ActionType.CALL_LOCAL_LLM,
                    description="Test LLM integration",
                    params={"prompt": "Analyze system readiness for autonomous operations"}
                )
            ],
            transaction_id=f"demo_tx_{int(time.time())}",
            source_actor="self_diagnostic"
        )

        # Execute the demonstration
        result = await self.execute_instruction_block(demo_instruction)
        logger.info(f"üéØ Demo execution completed: {result.overall_success}")

        # Main loop - in a real implementation, this would listen for gRPC requests
        while self.is_running:
            # Status logging every 30 seconds
            status = self.get_status()
            logger.info(f"üíì Agent heartbeat: {status['active_instructions']} active, {status['total_executions']} total executions")

            await asyncio.sleep(30)

    async def stop(self):
        """Stop the Agent Ex-Work daemon"""
        logger.info("üõë Stopping Agent Ex-Work...")
        self.is_running = False
        logger.info("‚úÖ Agent Ex-Work stopped")


async def main():
    """Main entry point"""
    try:
        # Change to the agent directory
        agent_dir = Path(__file__).parent
        os.chdir(agent_dir)

        # Create and start the agent
        agent = AgentExWork()
        await agent.start()

    except KeyboardInterrupt:
        logger.info("üî¥ Received interrupt signal, shutting down...")
    except Exception as e:
        logger.error(f"üí• Fatal error: {e}")
        raise
    finally:
        logger.info("üèÅ Agent Ex-Work shutdown complete")


if __name__ == "__main__":
    asyncio.run(main())
